kubernetes/apps/networking/gateway/internal/internal-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: cilium-internal
  namespace: networking
spec:
  gatewayClassName: cilium
  addresses:
    - type: "IPAddress"
      value: ${SVC_INTERNAL_CILIUM_GATEWAY_ADDRESSS}
  listeners:
    - name: http-1
      protocol: HTTP
      port: 80
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
    - name: https-1
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-production-tls"
